Vertex Slide crippled functionality #38756

Closed
opened 2014-02-22 14:27:06 +01:00 by Thore Korneliussen · 16 comments

System Information

System: Mac OS X 10.6.8 (10K549)
Graphics card: ATI Radeon HD 5670

Blender Version

Broken: Blender 2.70 Test build 1 (v2.69.11)
Date: 2014-02-20 - 20.05:32
Hash: 4789793

Works: Blender 2.69.0 v60991 (The Official Release) Oct 31, 2013

Short description of error

The Vertex Slide functionality (called from menu, or GG, or Shift V) will slide vertex along one edge only (or the extension of one edge) from its original position.

Exact steps for others to reproduce the error

Open the attached .blend{F78474} file (Vertex Slide Bug or Feature). Slide the selected vertex along positive Y axis.
Then try to slide the vertex along negative X axis or negative Z axis without entering the Vertex Slide command again. The sliding vertex is stuck at the original junction, and will not move along any other axes than the initial one (or the extension of it by unclamping).

In the official Blender 2.69.0 release the vertex can be freely moved along any connected edge without having to call the Vertex Slide command several times.

**System Information** System: Mac OS X 10.6.8 (10K549) Graphics card: ATI Radeon HD 5670 **Blender Version** Broken: Blender 2.70 Test build 1 (v2.69.11) Date: 2014-02-20 - 20.05:32 Hash: 4789793 Works: Blender 2.69.0 v60991 (The Official Release) Oct 31, 2013 **Short description of error** The Vertex Slide functionality (called from menu, or GG, or Shift V) will slide vertex along one edge only (or the extension of one edge) from its original position. **Exact steps for others to reproduce the error** Open the attached .blend{[F78474](https://archive.blender.org/developer/F78474/Vertex_Slide_Bug_Or_Feature.blend)} file (Vertex Slide Bug or Feature). Slide the selected vertex along positive Y axis. Then try to slide the vertex along negative X axis or negative Z axis *without entering the Vertex Slide command again.* The sliding vertex is stuck at the original junction, and will not move along any other axes than the initial one (or the extension of it by unclamping). In the official Blender 2.69.0 release the vertex can be freely moved along any connected edge without having to call the Vertex Slide command several times.

#38761 was marked as duplicate of this issue

#38761 was marked as duplicate of this issue

#38782 was marked as duplicate of this issue

#38782 was marked as duplicate of this issue

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @thorek

Added subscriber: @thorek

Added subscriber: @mont29

Added subscriber: @mont29
Campbell Barton was assigned by Bastien Montagne 2014-02-22 15:08:25 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Confirmed the behavior changed here, not sure this is wanted or a bug… Assigning to @ideasman42, since this is his area!

Confirmed the behavior changed here, not sure this is wanted or a bug… Assigning to @ideasman42, since this is his area!

Added subscriber: @smallb

Added subscriber: @smallb

◀ Merged tasks: #38782.

◀ Merged tasks: #38782.

@mont29

Commit from aef307cf31 causes this problem,

Whats happening is t->handleEvent is no longer called when the event is handled. This is fine in most cases but for mousemove it means that vertex-slide misses the mousemove events which were previously used to recalculate the vertex direction.

I'd be hesitant to make large changes here so close to release, so unless anyone can suggest something better we could simply change...

 // Per transform event, if present
 if (t->handleEvent && !handled)
	t->redraw |= t->handleEvent(t, event);

to...
// Per transform event, if present
if (t->handleEvent && (!handled || (event->type == MOUSEMOVE))) {
t->redraw |= t->handleEvent(t, event);
}

Note: I checked over the 4 different event handlers and vertex slide is the only one which checks for MOUSEMOVE events.

@mont29 Commit from aef307cf31 causes this problem, Whats happening is `t->handleEvent` is no longer called when the event is handled. This is fine in most cases but for mousemove it means that vertex-slide misses the mousemove events which were previously used to recalculate the vertex direction. I'd be hesitant to make large changes here so close to release, so unless anyone can suggest something better we could simply change... // Per transform event, if present if (t->handleEvent && !handled) t->redraw |= t->handleEvent(t, event); to... // Per transform event, if present if (t->handleEvent && (!handled || (event->type == MOUSEMOVE))) { t->redraw |= t->handleEvent(t, event); } Note: I checked over the 4 different event handlers and vertex slide is the only one which checks for `MOUSEMOVE` events.

This issue was referenced by blender/blender-addons-contrib@e82d648760

This issue was referenced by blender/blender-addons-contrib@e82d6487603dfb9e18521e709ad980aacc2e61be

This issue was referenced by e82d648760

This issue was referenced by e82d6487603dfb9e18521e709ad980aacc2e61be

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e82d648760.

Closed by commit e82d648760.

Added subscribers: @SylvanusDadzie, @ignatz

Added subscribers: @SylvanusDadzie, @ignatz

◀ Merged tasks: #38761.

◀ Merged tasks: #38761.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38756
No description provided.