Fix T38756: Regression with vertex slide responding to mouse events